# eyegen-playground

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  core.py  core_bonsai.py  core_bonsai_constants.py  core_bonsai_install.py  core_bonsai_models.py  core_bonsai_pipeline.py  core_coreml.py  core_coreml_constants.py  core_coreml_install.py  core_coreml_models.py  core_coreml_pipeline.py  create_app.sh  generate.py  gui.py  gui_hf_login.py  pyproject.toml  requirements.txt  ruff.toml  setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: config.json
design-system/: SESSION.md  palette.json
eyegen/: __init__.py  _mflux.py  _mlx.py  _model_ops.py  backends.py  config.py  errors.py  generation.py  hf.py  validation.py
eyegen/backends/: __init__.py  runner.py
eyegen/backends/bonsai/: __init__.py  install.py  models.py  pipeline.py
eyegen/backends/coreml/: __init__.py  (+3 more)
eyegen/cli/: __init__.py  _generate_helpers.py  app.py  bonsai.py  config.py  coreml.py  generate.py  hf.py  models.py  status.py
eyegen/gui/: COMPOSITION.md  __init__.py  backend_workers.py  cache.py  constants.py  dialogs.py  main.py  main_window.py  main_window_backend_handlers.py  main_window_controls.py  main_window_handlers.py  main_window_img2img.py  main_window_lifecycle.py  main_window_save_model.py  main_window_settings.py  main_window_state.py  main_window_ui.py  monkeypatch.py  state.py  utils.py  workers.py
scripts/: setup-bonsai.sh  setup-coreml.sh
tests/: test_backends.py  test_backends_bonsai.py  test_backends_bonsai_subprocess.py  test_backends_coreml.py  test_backends_runner.py  test_cli.py  test_config.py  test_generation.py  test_gui_backend_workers.py  test_model_ops.py  test_uncovered_internals.py  test_validation.py
