[project]
name = "eyegen"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.15.19",
    "tool>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
generate = "eyegen.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eyegen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "W",
  "F",
  "I",
  "B",
  "T20",
  "S",
  "PLR0915",
  "C90",
  "DTZ",
  "ASYNC",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-statements = 40

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
